# celeneos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  cmake_quick_install.cmake
example/: CMakeLists.txt
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/celeneos/: celeneos.hpp
src/: celeneos.cpp
test/: CMakeLists.txt  celeneos_tests.cpp
